--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -104,25 +104,6 @@ pages={395-399}
  address = {New York, NY, United States},
 } 
 
-@article{Berns:2013,
- author = {Berns, Anke and Gonzalez-Pardo, Antonio and Camacho, David},
- title = {Game-like Language Learning in 3-D Virtual Environments},
- journal = {Computers \& Education},
- issue_date = {January, 2013},
- volume = {60},
- number = {1},
- month = jan,
- year = {2013},
- issn = {0360-1315},
- pages = {210--220},
- numpages = {11},
- url = {http://dx.doi.org/10.1016/j.compedu.2012.07.001},
- doi = {10.1016/j.compedu.2012.07.001},
- acmid = {2397273},
- publisher = {Elsevier Science Ltd.},
- address = {Oxford, UK, UK},
- keywords = {Foreign language learning, Game-like applications, Motivation in education, OpenSim, Virtual worlds},
-} 
 
 @inproceedings{Palomo-Duarte:2012,
  author = {Palomo-Duarte, Manuel and Dodero, Juan Manuel and Tocino, Jos{\'e} Tom\'{a}s and Garc\'{\i}a-Dom\'{\i}nguez, Antonio and Balderas, Antonio},
@@ -1188,6 +1169,15 @@ author = "Leslie Borjas De Xena"
          journal={International Journal of Engineering Education - Special issue on Innovative Methods of Teaching Engineering},
         volume={31},
 	   number={3}
+}
+
+@incollection{berns2013using,
+  title={Using a 3D online game to assess students’ foreign language acquisition and communicative competence},
+  author={Berns, Anke and Palomo-Duarte, Manuel and Dodero, Juan Manuel and Valero-Franco, Concepci{\'o}n},
+  booktitle={Scaling up learning for sustained impact},
+  pages={19--31},
+  year={2013},
+  publisher={Springer}
 }
 
 @comment{jabref-meta: selector_publisher:}
