--- a/Latex/Macros/Macros.tex
+++ b/Latex/Macros/Macros.tex
@@ -182,7 +182,7 @@
 \newcommand{\MejorarTraducciones}{%
        \renewcommand{\listtablename}{Índice de tablas}
        \renewcommand{\tablename}{Tabla}
-       \renewcommand{\lstlistingname}{Lista}
+       \renewcommand{\lstlistingname}{Consulta}
 }%
 
 
